feat: add labels to list-resource api (#30)
